k8s/canary/api-gateway-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-canary
  namespace: dev
  labels:
    app: api-gateway-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-canary
  template:
    metadata:
      labels:
        app: api-gateway-canary
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api-gateway-canary
          image: ghcr.io/yassineboubkeur/api-gateway:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
