k8s/canary/api-gateway-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-canary
  namespace: dev
spec:
  selector:
    app: api-gateway-canary
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
